--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,30 @@ jobs:
           pip install tox
       - name: Lint
         run: tox -vv -e lint
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Cancel previous workflows that are still running
+        uses: styfle/cancel-workflow-action@0.8.0
+        with:
+          access_token: ${{ github.token }}
+      - name: Checkout latest commit
+        uses: actions/checkout@v2
+      - name: Set up python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.7"
+      - name: Set up pip cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: packaging-${{ runner.os }}-${{ hashFiles('tox.ini') }}
+      - name: Set up environment
+        run: |
+          pip install --upgrade pip wheel setuptools
+          pip install tox
+      - name: Check docs
+        run: tox -vv -e docs
   packaging:
     runs-on: ubuntu-latest
     steps:
@@ -108,7 +132,3 @@ jobs:
 
       - name: tests and coverage
         run: tox -vv -e ${{ matrix.tox-env }} -- --color=yes
-
-      - name: docs
-        if: matrix.python-version == '3.7'
-        run: tox -vv -e docs
