--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,19 +82,13 @@ jobs:
           pip install tox
       - name: Check packaging
         run: tox -vv -e check-packaging
-  run_test:
-
+  unit-tests:
     runs-on: ${{ matrix.os }}
-
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [
-          3.7,
-          3.8,
-          3.9,
-        ]
+        python-version: [3.7, 3.8, 3.9]
         include:
           - python-version: 3.7
             tox-env: py37
@@ -102,33 +96,31 @@ jobs:
             tox-env: py38
           - python-version: 3.9
             tox-env: py39
-
     steps:
-      - name: cancel previous workflows that are still running
+      - name: Cancel previous workflows that are still running
         uses: styfle/cancel-workflow-action@0.8.0
         with:
           access_token: ${{ github.token }}
-
-      - name: checkout latest commit
+      - name: Checkout latest commit
         uses: actions/checkout@v2
-
-      - name: setup python ${{ matrix.python-version }}
+      - name: Set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: install python dependencies
+      - name: Set up pip cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: unit-tests-${{ matrix.os }}-${{ matrix.python-version }}-${{ hashFiles('tox.ini') }}
+      - name: Set up environment
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install tox
-
-      - name: Setup tmate session
+      - name: Set up tmate session
         uses: mxschmitt/action-tmate@v3
         if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
-
-      - name: Homebrew mysql installation
+      - name: Install mysql
         if: matrix.os == 'macos-latest'
         run: brew install mysql
-
-      - name: tests and coverage
+      - name: Run unit tests
         run: tox -vv -e ${{ matrix.tox-env }} -- --color=yes
