--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,10 +8,12 @@ on:
       debug_enabled:
         description: "Run the build with tmate debugging enabled"
         required: false
-
 jobs:
-  lint:
+  tox:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        tox-env: [lint, docs, check-packaging]
     steps:
       - name: Cancel previous workflows that are still running
         uses: styfle/cancel-workflow-action@0.8.0
@@ -27,68 +29,19 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pip
-          key: lint-${{ runner.os }}-${{ hashFiles('tox.ini') }}
+          key: ${{ matrix.tox-env }}-${{ runner.os }}-${{ hashFiles('tox.ini') }}
       - name: Set up environment
         run: |
           pip install --upgrade pip wheel setuptools
           pip install tox
-      - name: Lint
-        run: tox -vv -e lint
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cancel previous workflows that are still running
-        uses: styfle/cancel-workflow-action@0.8.0
-        with:
-          access_token: ${{ github.token }}
-      - name: Checkout latest commit
-        uses: actions/checkout@v2
-      - name: Set up python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.7"
-      - name: Set up pip cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: docs-${{ runner.os }}-${{ hashFiles('tox.ini') }}
-      - name: Set up environment
-        run: |
-          pip install --upgrade pip wheel setuptools
-          pip install tox
-      - name: Check docs
-        run: tox -vv -e docs
-  packaging:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cancel previous workflows that are still running
-        uses: styfle/cancel-workflow-action@0.8.0
-        with:
-          access_token: ${{ github.token }}
-      - name: Checkout latest commit
-        uses: actions/checkout@v2
-      - name: Set up python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.7"
-      - name: Set up pip cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: packaging-${{ runner.os }}-${{ hashFiles('tox.ini') }}
-      - name: Set up environment
-        run: |
-          pip install --upgrade pip wheel setuptools
-          pip install tox
-      - name: Check packaging
-        run: tox -vv -e check-packaging
+      - name: Run tox ${{ matrix.tox-env }}
+        run: tox -vv -e ${{ matrix.tox-env }}
   unit-tests:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [3.7, 3.8, 3.9]
         include:
           - python-version: 3.7
             tox-env: py37
@@ -111,7 +64,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pip
-          key: unit-tests-${{ matrix.os }}-${{ matrix.python-version }}-${{ hashFiles('tox.ini') }}
+          key: ${{ matrix.tox-env }}-${{ matrix.os }}-${{ hashFiles('tox.ini') }}
       - name: Set up environment
         run: |
           pip install --upgrade pip
