Restory the python-version key in unit test matrix

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
+        python-version: [3.7, 3.8, 3.9]
         include:
           - python-version: 3.7
             tox-env: py37
