--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,8 @@ jobs:
           access_token: ${{ github.token }}
       - name: Checkout latest commit
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # fetch all history with version tags
       - name: Set up python
         uses: actions/setup-python@v2
         with:
@@ -59,6 +61,8 @@ jobs:
           access_token: ${{ github.token }}
       - name: Checkout latest commit
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # fetch all history with version tags
       - name: Set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
