--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,8 @@ minversion = 3.1.0
 requires = virtualenv >= 20.0.0
 sources = setup.py src/bluesearch tests benchmarks data_and_models
 envlist = lint, py{37, 38, 39}, docs, check-packaging
+; Enable PEP-517/518, https://tox.wiki/en/latest/config.html#conf-isolated_build
+isolated_build = true
 
 [testenv]
 download = true
