Add the apidoc and check-apidoc tox envs + update CI

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@
 minversion = 3.1.0
 requires = virtualenv >= 20.0.0
 sources = setup.py src/bluesearch tests benchmarks data_and_models
-envlist = lint, py{37, 38, 39}, docs, check-packaging
+envlist = lint, py{37, 38, 39}, docs, check-apidoc check-packaging
 ; Enable PEP-517/518, https://tox.wiki/en/latest/config.html#conf-isolated_build
 isolated_build = true
 
@@ -78,6 +78,24 @@ commands =
     make doctest SPHINXOPTS=-W
     make html SPHINXOPTS=-W
 allowlist_externals = make
+
+[testenv:apidoc]
+skip_install = true
+allowlist_externals = rm
+deps =
+    sphinx
+commands =
+    rm -r docs/source/api
+    sphinx-apidoc -Tefo docs/source/api src/bluesearch src/bluesearch/version.py
+
+[testenv:check-apidoc]
+skip_install = true
+allowlist_externals = diff
+deps =
+    sphinx
+commands =
+    sphinx-apidoc -Tefo {envtmpdir} src/bluesearch src/bluesearch/version.py
+    diff {envtmpdir} docs/source/api
 
 [testenv:check-packaging]
 basepython = python3.7
