Ignore deprecation warnigns emitted by the docker package

--- a/tox.ini
+++ b/tox.ini
@@ -138,6 +138,7 @@ commands =
 testpaths = tests
 filterwarnings =
     error
+    ignore::DeprecationWarning:docker.*:
 addopts =
     --cov
     --cov-config=tox.ini
