Add a comment with a reference

--- a/tox.ini
+++ b/tox.ini
@@ -136,6 +136,7 @@ commands =
 
 [pytest]
 testpaths = tests
+# reason for the ignore: https://github.com/docker/docker-py/issues/2928
 filterwarnings =
     error
     ignore::DeprecationWarning:docker.*:
