--- a/tox.ini
+++ b/tox.ini
@@ -136,8 +136,10 @@ commands =
 
 [pytest]
 testpaths = tests
+# reason for the ignore: https://github.com/docker/docker-py/issues/2928
 filterwarnings =
     error
+    ignore::DeprecationWarning:docker.*:
 addopts =
     --cov
     --cov-config=tox.ini
