--- a/.mypy.ini
+++ b/.mypy.ini
@@ -23,5 +23,5 @@ strict_equality = True
 warn_redundant_casts = True
 warn_unused_ignores = True
 show_error_codes = True
-plugins = sqlmypy
+plugins = sqlmypy, pydantic.mypy
 exclude = benchmarks/conftest.py|data_and_models/pipelines/ner/transformers_vs_spacy/transformers/|data_and_models/pipelines/sentence_embedding/training_transformers/
