Revert "Implement TopicRule using pydantic"
This reverts commit ff9f972451871e782382614fd17a2bd6532562c5.

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -23,5 +23,5 @@ strict_equality = True
 warn_redundant_casts = True
 warn_unused_ignores = True
 show_error_codes = True
-plugins = sqlmypy, pydantic.mypy
+plugins = sqlmypy
 exclude = benchmarks/conftest.py|data_and_models/pipelines/ner/transformers_vs_spacy/transformers/|data_and_models/pipelines/sentence_embedding/training_transformers/
