Move mypy to a separate tox env (tox -e type)

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,17 @@ deps =
     flake8-comprehensions==3.5.0
     flake8-docstrings==1.6.0
     isort==5.9.1
+commands =
+    flake8 {posargs:{[tox]sources}}
+    isort --check {posargs:{[tox]sources}}
+    black --check {posargs:{[tox]sources}}
+    bandit -qr --exclude "benchmarks/,tests/,data_and_models/pipelines/ner/transformers_vs_spacy/transformers/" \
+    {posargs:{[tox]sources}}
+
+[testenv:type]
+basepython = python3.7
+skip_install = true
+deps =
     mypy==0.910
     pandas-stubs==1.2.0.1
     sqlalchemy-stubs==0.4
@@ -51,11 +62,6 @@ deps =
     types-setuptools==57.0.0
     typing-extensions==3.10.0.0
 commands =
-    flake8 {posargs:{[tox]sources}}
-    isort --check {posargs:{[tox]sources}}
-    black --check {posargs:{[tox]sources}}
-    bandit -qr --exclude "benchmarks/,tests/,data_and_models/pipelines/ner/transformers_vs_spacy/transformers/" \
-    {posargs:{[tox]sources}}
     mypy {posargs:{[tox]sources}}
 
 [testenv:format]
