--- a/tox.ini
+++ b/tox.ini
@@ -161,6 +161,7 @@ addopts =
     --verbosity=1
     --last-failed-no-failures=all
     -m "not slow and not network"
+    -p no:unraisableexception
 markers =
     network: tests that require a network connection
     slow: tests that are slow
