--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ ipython==7.31.1
 ipywidgets==7.6.3
 jupyterlab==3.0.17
 langdetect==1.0.9
+luigi==3.0.3
 mashumaro==3.0
 numpy==1.21.0
 pandas==1.3.0
