Ignore a luigi warning

--- a/tox.ini
+++ b/tox.ini
@@ -153,6 +153,7 @@ testpaths = tests
 filterwarnings =
     error
     ignore::DeprecationWarning:docker.*:
+    ignore::DeprecationWarning:luigi.task:
 addopts =
     --cov
     --cov-config=tox.ini
