Remove requires/inherits decorator

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -2,3 +2,26 @@
     autoload_range=true
     log_level = INFO
     local_scheduler = True
+
+[GlobalParams]
+    source=pubmed
+
+[DownloadTask]
+    from_month=2021-12
+    output_dir=luigi-pipeline
+    identifier=
+    ; emtpy string is considered default value
+
+[TopicExtractTask]
+    mesh_topic_db=luigi-pipeline/mesh_topic_db.json
+
+[TopicFilterTask]
+    filter_config=luigi-pipeline/filter-config.jsonl
+
+[ConvertPDFTask]
+    grobid_host=0.0.0.0
+    grobid_port=8070
+
+[AddTask]
+    db_url=luigi-pipeline/my-db.db
+    db_type=sqlite
