Add to_month logic to the pipeline

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -25,6 +25,7 @@ source = pubmed
 
 [DownloadTask]
 from_month = 2021-12
+to_month = 2022-02
 output_dir = luigi-pipeline
 identifier =
 ; emtpy string is considered default value
