--- a/tox.ini
+++ b/tox.ini
@@ -191,7 +191,7 @@ per-file-ignores =
 [isort]
 profile = black
 honor_noqa = true
-known_third_party = docker
+src_paths = src
 extend_skip =
     data_and_models/pipelines/sentence_embedding/training_transformers/
     data_and_models/pipelines/ner/transformers_vs_spacy/transformers/
