--- a/tox.ini
+++ b/tox.ini
@@ -69,10 +69,10 @@ commands =
 
 [testenv:format]
 description = Apply black and isort
-basepython = python3.7
+basepython = python3.8
 skip_install = true
 deps =
-    black==21.5b1
+    black==22.3.0
     isort==5.8.0
 commands =
     isort {posargs:{[tox]sources}}
