--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ basepython = python3.7
 skip_install = true
 deps =
     bandit==1.7.0
-    black==21.6b0
+    black==22.3.0
     flake8==3.9.2
     flake8-bugbear==21.4.3
     flake8-comprehensions==3.5.0
