Ignore Pillow deprecationwarning

--- a/tox.ini
+++ b/tox.ini
@@ -154,6 +154,7 @@ filterwarnings =
     error
     ignore::DeprecationWarning:docker.*:
     ignore::DeprecationWarning:luigi.task:
+    ignore::DeprecationWarning:Pillow.*:
 addopts =
     --cov
     --cov-config=tox.ini
