--- a/tox.ini
+++ b/tox.ini
@@ -154,7 +154,7 @@ filterwarnings =
     error
     ignore::DeprecationWarning:docker.*:
     ignore::DeprecationWarning:luigi.task:
-    ignore::DeprecationWarning:PIL.Image:
+    ignore::DeprecationWarning:PIL.*:
 addopts =
     --cov
     --cov-config=tox.ini
