Fix black issues (#599)

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ basepython = python3.7
 skip_install = true
 deps =
     bandit==1.7.0
-    black==21.6b0
+    black==22.3.0
     flake8==3.9.2
     flake8-bugbear==21.4.3
     flake8-comprehensions==3.5.0
@@ -69,10 +69,10 @@ commands =
 
 [testenv:format]
 description = Apply black and isort
-basepython = python3.7
+basepython = python3.8
 skip_install = true
 deps =
-    black==21.5b1
+    black==22.3.0
     isort==5.8.0
 commands =
     isort {posargs:{[tox]sources}}
@@ -154,6 +154,7 @@ filterwarnings =
     error
     ignore::DeprecationWarning:docker.*:
     ignore::DeprecationWarning:luigi.task:
+    ignore::DeprecationWarning:transformers.image_utils.*:
 addopts =
     --cov
     --cov-config=tox.ini
