Attempt to make tests pass

--- a/tox.ini
+++ b/tox.ini
@@ -155,6 +155,7 @@ filterwarnings =
     ignore::DeprecationWarning:docker.*:
     ignore::DeprecationWarning:luigi.task:
     ignore::DeprecationWarning:transformers.image_utils.*:
+    ignore::UserWarning:luigi.parameter.UnconsumedParameterWarning:
 addopts =
     --cov
     --cov-config=tox.ini
