--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@
 [tox]
 minversion = 3.1.0
 requires = virtualenv >= 20.0.0
-sources = setup.py src/bluesearch tests benchmarks data_and_models
+sources = setup.py .env src/bluesearch tests benchmarks data_and_models
 envlist = lint, type, py{37, 38, 39}, docs, check-apidoc, check-packaging
 ; Enable PEP-517/518, https://tox.wiki/en/latest/config.html#conf-isolated_build
 isolated_build = true
@@ -155,6 +155,7 @@ filterwarnings =
     ignore::DeprecationWarning:docker.*:
     ignore::DeprecationWarning:luigi.task:
     ignore::DeprecationWarning:transformers.image_utils.*:
+    ignore::elastic_transport.SecurityWarning
 addopts =
     --cov
     --cov-config=tox.ini
