--- a/tox.ini
+++ b/tox.ini
@@ -156,6 +156,7 @@ filterwarnings =
     ignore::DeprecationWarning:luigi.task:
     ignore::DeprecationWarning:transformers.image_utils.*:
     ignore::elastic_transport.SecurityWarning
+    ignore::urllib3.exceptions.InsecureRequestWarning
 addopts =
     --cov
     --cov-config=tox.ini
