--- a/tox.ini
+++ b/tox.ini
@@ -176,7 +176,7 @@ source = bluesearch
 branch = True
 
 [coverage:report]
-#fail_under = 80
+fail_under = 80
 skip_covered = False
 show_missing = False
 
