Revert "Feature/start es k8s (#626)"
This reverts commit 9663262cb3305b6ab07a72baf159b32d0a360e30.

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@
 [tox]
 minversion = 3.1.0
 requires = virtualenv >= 20.0.0
-sources = setup.py .env src/bluesearch tests benchmarks data_and_models
+sources = setup.py src/bluesearch tests benchmarks data_and_models
 envlist = lint, type, py{37, 38, 39}, docs, check-apidoc, check-packaging
 ; Enable PEP-517/518, https://tox.wiki/en/latest/config.html#conf-isolated_build
 isolated_build = true
@@ -155,8 +155,6 @@ filterwarnings =
     ignore::DeprecationWarning:docker.*:
     ignore::DeprecationWarning:luigi.task:
     ignore::DeprecationWarning:transformers.image_utils.*:
-    ignore::elastic_transport.SecurityWarning
-    ignore::urllib3.exceptions.InsecureRequestWarning
     ignore::luigi.parameter.UnconsumedParameterWarning:
 addopts =
     --cov
