--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 10
+          - xpack.security.enabled=false
         ports:
         # <port on host>:<port on container>
         - 9200:9200
