--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,12 +16,12 @@ jobs:
         image: docker.elastic.co/elasticsearch/elasticsearch:8.3.3
         env:
           discovery.type: single-node
+          xpack.security.enabled: false
         options: >-
           --health-cmd "curl http://localhost:9200/_cluster/health"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 10
-          - xpack.security.enabled=false
         ports:
         # <port on host>:<port on container>
         - 9200:9200
