Download spacy model just before unit tests

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,9 @@ description = Run pytest
 download = true
 extras = dev
 allowlist_externals = docker
-commands = pytest -m "" {posargs:tests}
+commands =
+    python -m spacy download en-core-web-sm
+    pytest -m "" {posargs:tests}
 
 [testenv:lint]
 description = Lint using flake8, black, isort and bandit
