Use underscores instead

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ download = true
 extras = dev
 allowlist_externals = docker
 commands =
-    python -m spacy download en-core-web-sm
+    python -m spacy download en_core_web_sm
     pytest -m "" {posargs:tests}
 
 [testenv:lint]
