fix-unittest-"Feature/start-es-k8s-(#626)" (#634)
* remove outdated test

* remove .env file from tox

* flake8 fixes

* add __init__.py

* add docstring to init

* add docstring to init

* update docs

* add elasticsearch to ci

* update ci

* update ci

* update ci

* update ci

* Modify test and the design

* linters

* linters

* Fix random pandas issue

* Temp removal of tox dependencies

* Completely get rid of en-core-sci-lg

* Download spacy model just before unit tests

* Use underscores instead

* update docstrings

Co-authored-by: Diogo Santos <diogo.reissantos@epfl.ch>
Co-authored-by: Jan Krepl <jankrepl@yahoo.com>

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@
 [tox]
 minversion = 3.1.0
 requires = virtualenv >= 20.0.0
-sources = setup.py .env src/bluesearch tests benchmarks data_and_models
+sources = setup.py src/bluesearch tests benchmarks data_and_models
 envlist = lint, type, py{37, 38, 39}, docs, check-apidoc, check-packaging
 ; Enable PEP-517/518, https://tox.wiki/en/latest/config.html#conf-isolated_build
 isolated_build = true
@@ -26,12 +26,11 @@ isolated_build = true
 [testenv]
 description = Run pytest
 download = true
-deps =
-    en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
-    en-core-sci-lg @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_lg-0.4.0.tar.gz
 extras = dev
 allowlist_externals = docker
-commands = pytest -m "" {posargs:tests}
+commands =
+    python -m spacy download en_core_web_sm
+    pytest -m "" {posargs:tests}
 
 [testenv:lint]
 description = Lint using flake8, black, isort and bandit
