--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,6 +68,13 @@ jobs:
             tox-env: py39
           - python-version: 3.10
             tox-env: py310
+        exclude:
+          - python-version: 3.8
+            tox-env: py38
+            os: macos-latest
+          - python-version: 3.9
+            tox-env: py39
+            os: macos-latest
     steps:
       - name: Cancel previous workflows that are still running
         uses: styfle/cancel-workflow-action@0.8.0
