--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,14 +60,19 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ["3.8", "3.9", "3.10"]
         include:
-          - python-version: 3.7
-            tox-env: py37
           - python-version: 3.8
             tox-env: py38
           - python-version: 3.9
             tox-env: py39
+          - python-version: 3.10
+            tox-env: py310
+        exclude:
+          - python-version: 3.8
+            os: macos-latest
+          - python-version: 3.9
+            os: macos-latest
     steps:
       - name: Cancel previous workflows that are still running
         uses: styfle/cancel-workflow-action@0.8.0
