--- a/tox.ini
+++ b/tox.ini
@@ -157,6 +157,7 @@ filterwarnings =
     ignore::elastic_transport.SecurityWarning
     ignore::urllib3.exceptions.InsecureRequestWarning
     ignore::luigi.parameter.UnconsumedParameterWarning:
+    ignore::UserWarning:spacy.language:
 addopts =
     --cov
     --cov-config=tox.ini
